--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dj-database-url==0.5.0
 Django==3.2.5
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
-# djangorestframework-simplejwt==4.7.1
+djangorestframework-simplejwt==4.7.1
 gunicorn==20.1.0
 idna==2.10
 Pillow==8.3.0
